# c-web-server

./: .gitignore  CMakeLists.txt  INSTALL.md  Makefile  README.md
webserver/: .lab3-config  Makefile
webserver/include/: config.h  daemon.h  handle.h  logger.h  mime.h  request.h  response.h  server.h  usage.h  util.h
webserver/src/: config.c  daemon.c  handle.c  logger.c  main.c  mime.c  request.c  response.c  server.c  usage.c  util.c
www/: index.html  test.js
www/check_students/: check.sh
